# dagoba

./: README.md  dagoba.cabal
src/: Dagoba.hs
src/Dagoba/: Elements.hs  Graph.hs  Query.hs  TakeOne.hs
test/: Spec.hs
