name:                dagoba
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pbrisbin/dagoba
license:             MIT
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          pbrisbin@gmail.com
copyright:           2017 Patrck Brisbin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Dagoba
  other-modules:       Dagoba.Elements
                       Dagoba.Graph
                       Dagoba.Query
                       Dagoba.TakeOne
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite oss-guidelines-check-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , dagoba
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbrisbin/dagoba
